--- a/.github/workflows/lock-on-label.yml
+++ b/.github/workflows/lock-on-label.yml
@@ -1,5 +1,7 @@
 # This is the name of the GitHub Action workflow
 name: Lock Blocked Issues
+
+# This explicitly gives the workflow permission to write to issues (i.e., lock/unlock)
 permissions:
   issues: write
 
@@ -16,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     # Define the steps for the job
     steps:
-      - name: Lock issue when 'status: blocked' label is added
-        # This 'if' condition checks if the action was 'labeled' AND if the label name is 'status: blocked'
+      - name: Lock issue when 'blocked' label is added
+        # This 'if' condition checks if the action was 'labeled' AND if the label name is 'blocked'
         if: github.event.action == 'labeled' && github.event.label.name == 'blocked'
         # This uses a pre-made action to easily interact with the GitHub API
         uses: actions/github-script@v7
@@ -31,10 +33,10 @@ jobs:
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
-            console.log(`Locked issue #${context.issue.number} because the 'status: blocked' label was added.`);
+            console.log(`Locked issue #${context.issue.number} because the 'blocked' label was added.`);
 
-      - name: Unlock issue when 'status: blocked' label is removed
-        # This 'if' condition checks if the action was 'unlabeled' AND if the label name is 'status: blocked'
+      - name: Unlock issue when 'blocked' label is removed
+        # This 'if' condition checks if the action was 'unlabeled' AND if the label name is 'blocked'
         if: github.event.action == 'unlabeled' && github.event.label.name == 'blocked'
         uses: actions/github-script@v7
         with:
