--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+
+# AWS credentials and sensitive files
+*.pem
+*.key
+aws-credentials.json
 
 # vercel
 .vercel
