--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8",
+    "eslint-config-next": "15.2.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
